--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,24 @@ spring.datasource.secondary.url=jdbc:mysql://localhost:3306/test2
 spring.datasource.secondary.username=root
 spring.datasource.secondary.password=root
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
+
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=10.1.6.182
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=5000
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=50
+# 连接超时时间（毫秒）
+spring.redis.timeout=10000
+spring.redis.testOnBorrow=true
