--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.secondary.username=root
 spring.datasource.secondary.password=root
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
+spring.jpa.properties.hibernate.show_sql=true
+spring.output.ansi.enabled=DETECT
+logging.file=my.log
+
 # REDIS (RedisProperties)
 # Redis数据库索引（默认为0）
 spring.redis.database=0
