--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.show_sql=true
 spring.output.ansi.enabled=DETECT
 logging.file=my.log
+#dubbo
+dubbo.registry.address=192.168.16.103:2181
 
 # REDIS (RedisProperties)
 # Redis数据库索引（默认为0）
